[project]
name = "snake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.0",
    "ipympl>=0.9.7",
    "jupyter>=1.1.1",
    "keras>=3.11.1",
    "matplotlib>=3.10.5",
    "numpy>=2.1.3",
    "pygame>=2.6.1",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
